test: add tests for user api
